--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: register-app
-          image: shariq81/register-app-pipeline:1.0.0-18
+          image: shariq81/register-app-pipeline:
           resources:
             limits:
               memory: "256Mi"
